ubuntu-dev-tools (0.43ubuntu2) UNRELEASED; urgency=low

  * Fix a number of minor glitches in manual pages.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 01 Sep 2008 09:48:38 +0100

ubuntu-dev-tools (0.43ubuntu1) intrepid; urgency=low

  * Bazaar revision 195.

  [ Jonathan Patrick Davies ]
  * common.py:
    - If loading a cookie file raises an exception exit. 
    - Improve cookie file writing.
    - New function: isLPTeamMember() - checks if the user is a member of the
      Launchpad team using cookies for authentication.
    - New function: packageComponent() - returns which component a package in
      Ubuntu is in.
  * requestsync:
    - Return an error when the script is unable to connect to
      packages.debian.org (LP: #261916).
    - Adapt team checking with the function above.
  * buildd:
    - Adapt privilege checking code to the new function above.
    - Check which component the package is in.

  [ Ryan Kavanagh ]
  * dgetlp.1: New manpage
  * dgetlp: fix typo in usage
  * hugdaylist.1: New manpage
  * s/requestsync/pull-lp-source/g in doc/pull-lp-source.1
  * mk-sbuild-lv.1: New manpage

  [ Karl Goetz ]
  * Add a Recommends: on ca-certificates (LP: #247157).

 -- Jonathan Patrick Davies <jpds@ubuntu.com>  Sun, 31 Aug 2008 11:40:30 +0200

ubuntu-dev-tools (0.42ubuntu1) intrepid; urgency=low

  [Jonathan Patrick Davies]
  * requestsync: Exit when connecting to Launchpad fails.
  * doc/requestsync.1: Document new -d flag.
  * common.py: New functions: checkReleaseExists() and checkSourceExists().
  * buildd and pull-lp-source: Adapt code to use new functions above.

  [ Jelmer Vernooij ]
  * requestsync: Add -d option to allow overriding the Debian distro to sync
  from. (LP: #253497)

 -- Jonathan Patrick Davies <jpds@ubuntu.com>  Sun, 24 Aug 2008 21:43:30 +0100

ubuntu-dev-tools (0.41) intrepid; urgency=low

  [ Loic Minier ]
  * Replace .BB in doc/pbuilder-dist.1 with a newline to fix a syntax error.
  * Drop spurious tab in buildd.