@@ -29,7 +29,7 @@ from optparse import OptionGroup
 from optparse import OptionParser
 from urllib import urlencode
 
-sys.path.append('/usr/share/ubuntu-dev-tools/')
+sys.path.append("/usr/share/ubuntu-dev-tools/")
 import common
 
 # Usage.
@@ -81,18 +81,11 @@ elif op in ("retry", "rescore") and options.architecture:
 else:
     oneArch = False
 
-# Clear https_proxy env var as it's not supported in urllib/urllib2; see
-# LP #122551
-if os.environ.has_key('https_proxy'):
-    print >> sys.stderr, "Ignoring https_proxy (no support in urllib/urllib2; see LP #122551)"
-    del os.environ['https_proxy']
-
 # Prepare Launchpad cookie.
 launchpadCookie = common.prepareLaunchpadCookie()
 urlopener = common.setupLaunchpadUrlOpener(launchpadCookie)
 
 # Check the release exists.
-# Check release by checking if Launchpad page exists
 common.checkReleaseExists(release)
 
 # Find out the version in given release.
