@@ -32,6 +32,12 @@ import subprocess
 import sys
 import urllib2
 
+# Clear https_proxy env var as it's not supported in urllib/urllib2; see
+# LP #122551
+if os.environ.has_key('https_proxy'):
+    print >> sys.stderr, "Ignoring https_proxy (no support in urllib/urllib2; see LP #122551)"
+    del os.environ['https_proxy']
+
 def mkdir(directory):
     """ Create the given directory and all its parents recursively, but don't
         raise an exception if it already exists. """
