@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Ubuntu MOTU Developers <ubuntu-motu@lists.ubuntu.com>
 Vcs-Bzr: http://bazaar.launchpad.net/~ubuntu-dev/ubuntu-dev-tools/trunk
 Vcs-Browser: http://codebrowse.launchpad.net/~ubuntu-dev/ubuntu-dev-tools/trunk/changes
-Build-Depends: cdbs (>= 0.4.49), debhelper (>= 5), python-all-dev (>= 2.4)
+Build-Depends: cdbs (>= 0.4.49), debhelper (>= 6), python-all-dev (>= 2.4)
 Build-Depends-Indep: python-central (>= 0.5)
 XS-Python-Version: >= 2.5
 Homepage: https://launchpad.net/ubuntu-dev-tools/
@@ -13,13 +13,17 @@ Standards-Version: 3.8.0
 Package: ubuntu-dev-tools
 Architecture: all
 Section: devel
-Depends: ${python:Depends}, binutils, devscripts, sudo, python-launchpad-bugs (>= 0.2.25), python-debian, dctrl-tools, lsb-release, diffstat, dpkg-dev
+Depends: ${python:Depends}, binutils, devscripts, sudo, python-debian,
+  python-launchpad-bugs (>= 0.2.25), dctrl-tools, lsb-release, diffstat,
+  dpkg-dev
 Recommends: bzr, pbuilder | sbuild, reportbug (>= 3.39ubuntu1),
   ca-certificates
 Conflicts: devscripts (<< 2.10.7ubuntu5)
 Replaces: devscripts (<< 2.10.7ubuntu5)
 XB-Python-Version: ${python:Versions}
 Description: useful tools for Ubuntu developers
- This is a collection of useful tools that Ubuntu developers use to
- make their packaging work a lot easier. Such tools can include bug
- filing, packaging preparation, package analysis, etc.
+ This is a collection of useful tools that Ubuntu developers use to make their
+ packaging work a lot easier.
+ .
+ Such tools can include bug filing, build rebuilding, packaging preparation,
+ package analysis, among other things.
