@@ -1,6 +1,14 @@
 ubuntu-dev-tools (0.43ubuntu2) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Fix a number of minor glitches in manual pages.
+
+  [ Jonathan Patrick Davies ]
+  * debian/control:
+    - Improved description.
+    - Wrapped Depends line and bumped debhelper build-dependency version to 6.
+  * debian/compat: Changed to 6.
+  * Moved https_proxy dropping code to common.py.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 01 Sep 2008 09:48:38 +0100
 
